# traffic-flow

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
img/: .gitignore
notebooks/: simulation1_results.ipynb
tests/scenarios/: single_vehicle_scenario.py  traffic_light_scenario.py  two_roads_scenario.py  two_vehicles_scenario.py
traffic_flow/models/: __init__.py  road.py  traffic_flow.py  traffic_lights.py  vehicle.py
traffic_flow/simulation_helpers/: vehicle_generator.py
traffic_flow/simulations/: simple_traffic_light.py
