[tool.poetry]
name = "traffic-flow"
version = "0.1.0"
description = "Traffic flow simulation - the final project for the Introduction to Deterministic Models course"
authors = ["strykk <thestrykk@gmail.com>"]
readme = "README.md"
packages = [{include = "traffic_flow"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"
plotly = "^5.18.0"
ipykernel = "^6.29.2"
nbformat = "^5.9.2"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
